force-app/main/default/objects/Agencies_Supporting_Combined_Reporting__c/Agencies_Supporting_Combined_Reporting__c.object-meta.xml
<CustomObject>
    <label>Agencies Supporting Combined-Reporting</label>
    <nameField>
        <displayFormat>AGN-{00000}</displayFormat>
        <label>Agencies Supporting Combined-Reporting N</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agencies Supporting Combined-Reporting</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>