force-app/main/default/objects/Agencies_Supporting_Combined_Reporting__c/fields/Additional_Amendment_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Additional_Amendment_Requirements__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Additional Amendment Requirements</label>
    <type>Checkbox</type>
</CustomField>