force-app/main/default/objects/Agencies_Supporting_Combined_Reporting__c/fields/Does_Payment_Have_To_Match_Return__c.field-meta.xml
<CustomField>
    <fullName>Does_Payment_Have_To_Match_Return__c</fullName>
    <label>Does Payment Have To Match Return?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>