force-app/main/default/objects/Agencies_Supporting_Combined_Reporting__c/fields/Does_The_Form_Change_Annually__c.field-meta.xml
<CustomField>
    <fullName>Does_The_Form_Change_Annually__c</fullName>
    <label>Does The Form Change Annually?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>