force-app/main/default/objects/Agencies_Supporting_Combined_Reporting__c/fields/Efile_Mandate_Agency_Link__c.field-meta.xml
<CustomField>
    <fullName>Efile_Mandate_Agency_Link__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Efile Mandate Agency Link</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>