force-app/main/default/objects/Agencies_Supporting_Combined_Reporting__c/fields/File_Naming_Requirements__c.field-meta.xml
<CustomField>
    <fullName>File_Naming_Requirements__c</fullName>
    <label>File Naming Requirements?</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>