force-app/main/default/objects/Agencies_Supporting_Combined_Reporting__c/fields/Is_The_Annual_Rep_A_Combined_Report__c.field-meta.xml
<CustomField>
    <fullName>Is_The_Annual_Rep_A_Combined_Report__c</fullName>
    <label>Is The Annual Report A Combined Report?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>