force-app/main/default/objects/Agencies_Supporting_Combined_Reporting__c/fields/Refund_Timeline_Restrictions__c.field-meta.xml
<CustomField>
    <fullName>Refund_Timeline_Restrictions__c</fullName>
    <label>Refund Timeline Restrictions</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>