force-app/main/default/objects/Agencies_Supporting_Combined_Reporting__c/fields/Rejection_Criteria_ER_EE__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Criteria_ER_EE__c</fullName>
    <label>Rejection Criteria (ER/EE)</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>