force-app/main/default/objects/Agencies_Supporting_Combined_Reporting__c/recordTypes/Combined_Reporting_Agency_Info.recordType-meta.xml
<RecordType>
    <fullName>Combined_Reporting_Agency_Info</fullName>
    <active>true</active>
    <label>Combined-Reporting Agency Info</label>
</RecordType>