force-app/main/default/objects/Agencies_Supporting_Combined_Reporting__c/recordTypes/Combined_Reporting_Annual_Filing_Reconciliation.recordType-meta.xml
<RecordType>
    <fullName>Combined_Reporting_Annual_Filing_Reconciliation</fullName>
    <active>true</active>
    <label>Combined-Reporting, Annual Filing (Reconciliation)</label>
</RecordType>