force-app/main/default/objects/Agencies_Supporting_Combined_Reporting__c/recordTypes/Combined_Reporting_Non_Annual_Filings.recordType-meta.xml
<RecordType>
    <fullName>Combined_Reporting_Non_Annual_Filings</fullName>
    <active>true</active>
    <label>Combined-Reporting, Non-Annual Filings</label>
</RecordType>